# mcrcon

./: CLAUDE.md  README.md  pyproject.toml
src/mcrcon/: __init__.py  __main__.py  cli.py  client.py  completer.py  config.py  credentials.py  formatting.py  help_fetcher.py  help_parser.py  protocol.py  repl.py
tests/: test_cli.py  test_client.py  test_completer.py  test_config.py  test_credentials.py  test_formatting.py  test_help_fetcher.py  test_help_parser.py  test_protocol.py
